nllb model evalution

--- a/models/translation/results.json
+++ b/models/translation/results.json
@@ -1,15 +1,42 @@
 {
   "Whisper": {
-    "sw_TZ": {
+    "swh": {
       "BLEU": 0.0,
-      "COMET": 0.39999365210533144,
+      "COMET": 0.3893144460916519,
+      "WER": 100.0
+    },
+    "lug": {
+      "BLEU": 0.0,
+      "COMET": 0.417724705517292,
+      "WER": 100.0
+    },
+    "teo": {
+      "BLEU": 0.0,
+      "COMET": 0.42262366369366644,
+      "WER": 100.0
+    },
+    "nyn": {
+      "BLEU": 0.0,
+      "COMET": 0.41204442289471627,
       "WER": 100.0
     }
   },
   "NLLB": {
-    "sw_TZ": {
-      "BLEU": 1.6799426494437226,
-      "COMET": 0.4390106797218323
+    "swh": {
+      "BLEU": 25.86261931551504,
+      "COMET": 0.8411467353701592
+    },
+    "lug": {
+      "BLEU": 28.225964206039087,
+      "COMET": 0.7789787275195121
+    },
+    "teo": {
+      "BLEU": 0.48336242894511267,
+      "COMET": 0.35636164736747744
+    },
+    "nyn": {
+      "BLEU": 4.940350921471661,
+      "COMET": 0.524390498906374
     }
   }
 }
